// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionWatchEditWidget should render PositionWatchEditWidget correctly 1`] = `
<div
  className="position_watch_edit_widget"
>
  <div
    className="position_watch_edit_widget__select_wrapper"
  >
    <div
      className="position_watch_edit_widget__title"
    >
      Notification Level: 
    </div>
    <div
      className="position_watch_edit_widget__select"
    >
      <select
        className="select"
        onChange={[Function]}
        value="ALL"
      >
        <option
          value="ALL"
        >
          ALL
        </option>
        <option
          value="SOME"
        >
          SOME
        </option>
        <option
          value="REQUIRED"
        >
          REQUIRED
        </option>
      </select>
    </div>
  </div>
  <div
    className="position_watch_edit_widget__removal"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Remove Watch
    </button>
  </div>
</div>
`;

exports[`PositionWatchEditWidget should render PositionWatchEditWidget correctly when positions watched does not contain a matching position id 1`] = `
<div
  className="position_watch_edit_widget"
>
  <div
    className="position_watch_edit_widget__select_wrapper"
  >
    <div
      className="position_watch_edit_widget__title"
    >
      Notification Level: 
    </div>
  </div>
  <div
    className="position_watch_edit_widget__removal"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      Remove Watch
    </button>
  </div>
</div>
`;
